--- a/style.css
+++ b/style.css
@@ -1,15 +1,21 @@
-.card {
-    width: 20%;
-    height: 20%;
-    padding: 2em;
-    float: left;
-    background-color: white;
-    margin: 2em;
-    box-shadow: 0 0 5px #222;
-}
+
 
 body {
     background-color: #EEE;
+}
+
+.container {
+    display: flex;
+    flex-flow: row wrap;
+}
+
+.card {
+    width: 20em;
+    height: 20em;
+    padding: 2em;
+    background-color: white;
+    margin: 2em;
+    box-shadow: 0 0 5px #222;
 }
 
 .pie {
@@ -26,7 +32,6 @@ body {
     margin-left: 50%;
     height: 100%;
     border-radius: 0 100% 100% 0 / 50%;
-    /*background-color: inherit;*/
     background: #655;
     transform-origin: left;
     transform: rotate(.1turn);
@@ -58,4 +63,77 @@ body {
     height: 100%;
     background: conic-gradient(yellowgreen 40%, gold 0 70%, #f06 0);
     border-radius: 50%;
+}
+
+.flexbox-container {
+    display: flex;
+    flex-flow: row nowrap;
+}
+
+.new {
+    background-color: #444;
+}
+
+.pie-center {
+    background: transparent;
+    border-radius: 50%;
+    transform: rotate(-90deg);
+}
+
+.circle1 {
+    fill: transparent;
+    stroke: teal;
+    stroke-width: 7;
+    stroke-dasharray: 30 70;
+}
+
+.circle2 {
+    fill: transparent;
+    stroke: orangered;
+    stroke-width: 7;
+    stroke-dasharray: 45 55;
+    animation: dash3 1s ease 0s 1 forwards;
+}
+
+.circle3 {
+    fill: transparent;
+    stroke: orchid;
+    stroke-width: 7;
+    stroke-dasharray: 20 80;
+    animation: dash2 1s ease 0s 1 forwards;
+}
+
+.circle4 {
+    fill: transparent;
+    stroke: yellowgreen;
+    stroke-width: 7;
+    stroke-dasharray: 5 95;
+    animation: dash 1s ease 0s 1 forwards;
+}
+
+@keyframes dash {
+    from {
+        stroke-dashoffset: 0;
+    }
+    to {
+        stroke-dashoffset: -95;
+    }
+}
+
+@keyframes dash2 {
+    from {
+        stroke-dashoffset: 0;
+    }
+    to {
+        stroke-dashoffset: -75;
+    }
+}
+
+@keyframes dash3 {
+    from {
+        stroke-dashoffset: 0;
+    }
+    to {
+        stroke-dashoffset: -30;
+    }
 }
